# discord-pgp-bot

./: Cargo.toml
src/: help.txt  main.rs  register.rs
src/database/: mem.rs  mod.rs
