[package]
name = "discord-pgp-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "register"
path = "src/register.rs"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
serenity = { version = "0.11.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
